--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,4 +1,4 @@
-<h1>Pirate</h1>
+<h1>Pirates</h1>
 <div class="pirate">
   <h3>Name: <%= @pirate.name %> </h3>
   <h4>Weight: <%= @pirate.weight %> </h4>
